Update page URL

--- a/site.toml
+++ b/site.toml
@@ -7,4 +7,4 @@
 name = "site"
 
 # This page should be the root of your website. It's important.
-page = "https://www.notion.so/tatdat/27eb3aace9c04c0ea6a0d4368ddb92a4?v=18bd453caac44f3fa9420e754c1720c7"
+page = "https://tatdat.notion.site/tatdat/27eb3aace9c04c0ea6a0d4368ddb92a4?v=18bd453caac44f3fa9420e754c1720c7"
